samples/_failures_safe/1761282727_23d58b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d575478.c: In function ‘main’:
./samples/SAFE/__tmp_4d575478.c:160:9: error: expected expression at end of input
  160 |         } else
      |         ^
./samples/SAFE/__tmp_4d575478.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d575478.c:160:9: error: expected declaration or statement at end of input
